<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_page_padding"
    tools:context=".ui.LoginActivity">

    <ProgressBar
        android:id="@+id/login_page_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_page_success_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_baseline_done_outline_24"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/login_page_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_label_text"
            android:textColor="@color/black"
            android:textSize="@dimen/login_label_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edit_text_hint"
                android:inputType="text"
                android:minHeight="@dimen/login_page_min_text_edit_height"
                android:textColorHint="@color/edit_text_hint_text_color"
                android:textSize="@dimen/login_page_main_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_edit_text_hint"
                android:inputType="textPassword"
                android:minHeight="@dimen/login_page_min_text_edit_height"
                android:textColorHint="@color/edit_text_hint_text_color"
                android:textSize="@dimen/login_page_main_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_page_buttons_margin"
                android:layout_weight="1"
                android:text="@string/login_button_text"
                android:textSize="@dimen/login_page_buttons_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/login_page_buttons_margin"
                android:layout_weight="1"
                android:text="@string/registration_button_text"
                android:textSize="@dimen/login_page_buttons_text_size" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/forgot_password_button_text" />

    </LinearLayout>

</FrameLayout>